--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ authors = ["artur <shadaraevd@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 Django = "^4.0.4"
+gunicorn = "^20.1.0"
 
 [tool.poetry.dev-dependencies]
 python-dotenv = {extras = ["cli"], version = "^0.20.0"}
