--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["artur <shadaraevd@gmail.com>"]
 python = "^3.8"
 Django = "^4.0.4"
 gunicorn = "^20.1.0"
+django-bootstrap4 = "^22.1"
 
 [tool.poetry.dev-dependencies]
 python-dotenv = {extras = ["cli"], version = "^0.20.0"}
